tests/toy/neg/001494_mutation.toylang
program a = { var a else : bool; } .
